# MyTinyPlayer-Backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
include/: readme.md
src/: main.cpp
src/core/: AudioController.h  readme.md
src/dataModel/: AudioList.h  MusicLibrary.h  MyPlayList.h
src/network/: Network.cpp  Network.h  readme.md
src/player/: AudioPlayer.cpp  AudioPlayer.h  readme.md
src/source/: AudioSourceFactory.h  AudioSourceType.h  ImplAudioSource.cpp  ImplAudioSource.h
src/utils/: Logger.h  Macros.h  readme.md
tests/: readme.md
